# otplus-core

./: .gitignore  Cargo.toml  README.md
.github/workflows/: artifact.yml  ci.yml  publish.yml  release.yml
src/: helpers.rs  keychain.rs  lib.rs
src/cipher/: mod.rs  root_key.rs
src/encryption/: derived_key.rs  mod.rs  root_key.rs
src/header/: kdf.rs  mod.rs  wraps.rs
