[package]
name = "otplus-core"
version = "0.0.1"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
argon2 = "0.5.3"
base64 = "0.22.1"
chacha20poly1305 = "0.10.1"
chrono = "0.4.41"
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
thiserror = "2.0.16"
zeroize = "1.8.1"

[profile.release]
opt-level = 3
lto = "fat"     
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.dev]
opt-level = 1
debug = true
